--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 bumpalo = "3.16.0"
 clap = { version = "4.5.23", features = ["derive"] }
+dirs = "5.0.1"
 env_logger = "0.11.6"
 log = "0.4.22"
 nu-ansi-term = "0.50.1"
