--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,12 @@ edition = "2021"
 
 [dependencies]
 bumpalo = "3.16.0"
+chainmap = "0.1.2"
 clap = { version = "4.5.23", features = ["derive"] }
 dirs = "5.0.1"
 env_logger = "0.11.6"
 log = "0.4.22"
 nu-ansi-term = "0.50.1"
+rand = "0.8.5"
 reedline = "0.38.0"
 thiserror = "2.0.9"
