optimize release build

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,11 @@ name = "rlox2"
 version = "0.1.0"
 edition = "2021"
 
+[profile.release]
+codegen-units = 1
+lto = "fat"
+panic = "abort"
+
 [dependencies]
 chainmap = "0.1.2"
 clap = { version = "4.5.23", features = ["derive"] }
